--- a/app/assets/stylesheets/champions.css.scss
+++ b/app/assets/stylesheets/champions.css.scss
@@ -45,7 +45,7 @@ body {
   z-index: -10;
   background-color: #999;
   box-shadow: inset 0px 0px 220px rgba(30, 30, 30, 0.8);
-  background: url(/images/lolbackground.jpg) no-repeat;
+  background: url(lolbackground.jpg) no-repeat;
   background-size: cover;
 }
 
