--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,6 @@
 
 </body>
 <footer>
-  <em>All iamges and assets courtesy of Riot Games, Inc. All rights reserved. League of Legends and Riot Games are trademarks, service marks, or registered trademarks of Riot Games, Inc. &copy serious Biz v.1.0.0</em>
+  <em>All images and assets courtesy of Riot Games, Inc. All rights reserved. League of Legends and Riot Games are trademarks, service marks, or registered trademarks of Riot Games, Inc. &copy serious Biz v.1.0.0</em>
 </footer>
 </html>
