--- a/app/assets/javascripts/angular-app/views/comfort_picks.html
+++ b/app/assets/javascripts/angular-app/views/comfort_picks.html
@@ -24,7 +24,7 @@
   <tbody>
     <tr class="champs">
       <td ng-repeat="wp in winPicks">
-        <img ng-repeat="w in wp.win" ng-src="/assets/images/champions/{{w}}_{{picNum}}.jpg" ng-mouseover="changePic()">
+        <img ng-repeat="w in wp.win" ng-src="/images/champions/{{w}}_{{picNum}}.jpg" ng-mouseover="changePic()">
       </td>
     </tr>
   </tbody>
@@ -43,7 +43,7 @@
   <tbody>
     <tr class="champs">
       <td ng-repeat="pp in playPicks">
-        <img ng-repeat="p in pp.played" ng-src="/assets/images/champions/{{p}}_{{picNum}}.jpg" ng-mouseover="changePic()">
+        <img ng-repeat="p in pp.played" ng-src="/images/champions/{{p}}_{{picNum}}.jpg" ng-mouseover="changePic()">
       </td>
     </tr>
   </tbody>
