--- a/app/assets/javascripts/angular-app/views/team_compositions.html
+++ b/app/assets/javascripts/angular-app/views/team_compositions.html
@@ -31,8 +31,8 @@
         <img ng-repeat="slc in tc.slyChamps" ng-src="/images/champions/{{slc}}_{{num}}.jpg" >
       </td>
       <td class="col-md-2">
-        <img ng-repeat="yhc in tc.yellowChamps" ng-src="/assets/images/champions/{{yhc}}_{{num}}.jpg" ng-hide="yhc == 'Rammus'">
-        <img ng-repeat="yhc in tc.yellowChamps" ng-src="/assets/images/champions/{{yhc}}_5.jpg" ng-show="yhc == 'Rammus'">
+        <img ng-repeat="yhc in tc.yellowChamps" ng-src="/images/champions/{{yhc}}_{{num}}.jpg" ng-hide="yhc == 'Rammus'">
+        <img ng-repeat="yhc in tc.yellowChamps" ng-src="/images/champions/{{yhc}}_5.jpg" ng-show="yhc == 'Rammus'">
       </td>
     </tr>
   </tbody>
