--- a/app/assets/javascripts/angular-app/views/team_compositions.html
+++ b/app/assets/javascripts/angular-app/views/team_compositions.html
@@ -9,7 +9,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th class="col-md-2"><h3>Kyomi the Fox</h3></th>
+      <th class="col-md-2"><h3>Yunah</h3></th>
       <th class="col-md-2"><h3>SuitXUp</h3></th>
       <th class="col-md-2"><h3>DJ SojuTIME</h3></th>
       <th class="col-md-2"><h3>SlyDynamo</h3></th>
