--- a/app/assets/javascripts/angular-app/views/comfort_picks.html
+++ b/app/assets/javascripts/angular-app/views/comfort_picks.html
@@ -14,7 +14,7 @@
 <table class="table" ng-if="picks == 'win'" ng-controller="ComfortWinCtrl">
   <thead>
     <tr>
-      <th class="col-md-2"><h3>Kyomi the Fox</h3></th>
+      <th class="col-md-2"><h3>Yunah</h3></th>
       <th class="col-md-2"><h3>SuitXUp</h3></th>
       <th class="col-md-2"><h3>DJ SojuTIME</h3></th>
       <th class="col-md-2"><h3>SlyDynamo</h3></th>
@@ -33,7 +33,7 @@
 <table class="table" ng-if="picks == 'played'" ng-controller="ComfortPlayedCtrl">
   <thead>
     <tr>
-      <th class="col-md-2"><h3>Kyomi the Fox</h3></th>
+      <th class="col-md-2"><h3>Yunah</h3></th>
       <th class="col-md-2"><h3>SuitXUp</h3></th>
       <th class="col-md-2"><h3>DJ SojuTIME</h3></th>
       <th class="col-md-2"><h3>SlyDynamo</h3></th>
