--- a/app/assets/javascripts/angular-app/views/index.html
+++ b/app/assets/javascripts/angular-app/views/index.html
@@ -9,7 +9,7 @@
   <div style="font-size: 18pt;margin-top: 55px;" class="row">
     <div class="col-md-1"></div>
     <div class="col-md-2 landing-info">
-      <h3 style="margin-bottom: 15px;">Kyomi the Fox</h3>
+      <h3 style="margin-bottom: 15px;">Yunah</h3>
       <i class="fa fa-flask"></i>
       <i class="fa fa-medkit"></i>
       <i class="fa fa-crosshairs"></i>
