--- a/app/assets/javascripts/angular-app/views/group_dynamics.html
+++ b/app/assets/javascripts/angular-app/views/group_dynamics.html
@@ -1,8 +1,7 @@
 <nav-bar></nav-bar>
 
 <center class="row group-dynamics">
-  <div class="col-md-1"></div>
-  <div class="col-md-5 dyno-info">
+  <div class="col-md-6 dyno-info">
     <h1 style="margin-bottom:15px;">Positives</h1>
     <ul>
       <li><i class="fa fa-thumbs-up"></i> Strong with Assassin Comps</li>
@@ -14,7 +13,7 @@
     </ul>
   </div>
 
-  <div class="col-md-5 dyno-info">
+  <div class="col-md-6 dyno-info">
     <h1 style="margin-bottom:15px;">Improvements</h1>
     <ul>
       <li><i class="fa fa-thumbs-down"></i> Weak to Other Wombo Comps <em>(need better spacing)</em></li>
@@ -24,7 +23,6 @@
       <li><i class="fa fa-thumbs-down"></i> Could use Better Target Calling during Team Fights</li>
     </ul>
   </div>
-  <div class="col-md-1"></div>
 </center>
 
 <table class="table group-dynamics" style="margin-top: 100px;">
@@ -35,6 +33,7 @@
       <th class="col-md-2"><h3>DJ SojuTIME</h3></th>
       <th class="col-md-2"><h3>SlyDynamo</h3></th>
       <th class="col-md-2"><h3>YellowHappy</h3></th>
+      <th class="col-md-2"><h3>skguppy</h3></th>
     </tr>
   </thead>
   <tbody>
