modified team mates

--- a/public/ang-views/partials/navBar.html
+++ b/public/ang-views/partials/navBar.html
@@ -9,7 +9,7 @@
       </button>
       <a href="#/" class="navbar-brand">
         <img ng-src="/images/other/Tray_48.png" id="logo">
-        serious BIZ
+        Team.GG (v.beta)
       </a>
     </div>
     <div class="navbar-collapse collapse">
